# tauri-plugin-android-permission

./: Cargo.toml  README.md  package.json
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: AndroidPermission.kt  AndroidPermissionPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
permissions/autogenerated/: reference.md
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
