[package]
name = "tauri-plugin-android-permission"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-android-permission"

[dependencies]
tauri = { version = "2.3.1", features = ["specta"]}
specta = "=2.0.0-rc.20"
serde = "1.0"
thiserror = "2"
serde_json = "1.0.140"

[build-dependencies]
tauri-plugin = { version = "2.0.4", features = ["build"] }
